# quantarhei

./: .coverage  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .local_tests.sh.swp  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  agg.qrp  conftest.py  cy_setup.py  dtest.py  list_as_operators.txt  local_tests.sh  pavement.py  pyproject.toml  remcs.py  requirements.txt  requirements_devel.txt  requirements_test.txt  setup.py  tempfile  test.py
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml  python-package.yml  python-publish.yml
binder/: requirements.txt
builders/: __init__.py
core/: __init__.py  implementations.py  managers.py  matrixdata.py  triangle.py  units.py  valueaxis.py
docs/: Makefile  README  quantarhei_theory.lyx  quantarhei_theory.tex
docs/lyx/: Makefile  quantarhei_theory.lyx  quantarhei_theory.tex  rwa.lyx
docs/quantarhei_theory/: WARNINGS  images.pl  images.tex  index.html  internals.pl  labels.pl  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html  quantarhei_theory.html
docs/quantarhei_theory.html.LyXconv/: quantarhei_theory.css  quantarhei_theory.html
docs/sphinx/: advclasses.md  advclasses.rst  class_map.md  classes.md  classes.rst  conf.py  contribute.md  contribute.rst  examples.md  examples.rst  getstarted.md  getstarted.rst  index.md  index.rst  installation.md  installation.rst  internals.md  internals.rst  make.bat  mngrclasses.md  mngrclasses.rst  notebooks.md  requirements.txt
docs/sphinx2/: Makefile  conf.py  contribute.rst  index.rst
docs/wiki/: README
examples/: 047.3_Fraction_kinetics_CT.py  Makefile  README.rst  benchmark_twod_storage.py  demo1.py  demo2.py  demo3.py  demo3_corfce.py  demo4.py  demo4_FFT_of_DFunctions..py  demo5_units_of_Hamiltonian.py  demo6.py  demo6_absorption.py  demo7.py  demo_001_Molecule_Hamiltonian.py  demo_002_Molecule_Aggregate.py  demo_003_CorrFcnSpectDens.py  demo_004_SpectDensDatabase.py  demo_005_UnitsManagementHamiltonian.py  demo_006_Absorption_1.py  demo_010_RedfieldTheory_1.py  demo_011_LindbladForm_1.py  demo_013.1-HEOM.py  demo_013.1-HEOM1.py  demo_013_HEOM.py  demo_014_HEOM_rates.py  demo_015_RedfieldTheory_2.py  demo_016_FoersterTheory_1.py  demo_017_RedfieldTheory_MultiExcitons.py  demo_018_ModifiedRedfieldTheory_1.py  demo_030_2DSpectrum1.py  demo_031_PumpProbeSpectrum1.py  demo_035_2D_Vibronic.py  demo_036_2DSpectrumDisorder.py  demo_040_2DSpectrumAceto.py  demo_050_PDB_FMO1.py  demo_100_TimeAndFrequencyAxis.py  demo_101_OperatorFactory.py  demo_200_Secular.py  demo_2D_dimer.py  (+28 more)
examples/admin/: make_demos.py
examples/chapter02/: demo.py
examples/exp_data/: Carotenoid_exp_spec.csv  PP_experiment_rescaled.csv
examples/heom/: demo_heom.py
examples/notebooks/: 01_molecule_hamiltonian.ipynb  02_correlation_functions.ipynb  03_absorption_spectrum.ipynb  04_redfield_relaxation.ipynb  05_heom.ipynb  06_heom_qutip.ipynb
examples/old_demos/: demo3_corfce.py  demo4_FFT_of_DFunctions..py  demo7.py  demo_2D_dimer.py  demo_2D_dimer_movie.py  demo_abs.py  demo_foerster_1.py  demo_load.py  demo_model_spectdens.py  demo_persistence.py  demo_redfield_2.py  demo_redfield_3.py  demo_redfieldfoerster.py  dimer_props.py  fg_perylenes.py  heom_comparison.py  rates.py
examples/rc/: Makefile  README.rst  fft2D.py  onespec.py  runit
examples/symbolic/: test_symbolic_1.py  test_symbolic_2.py  test_symbolic_3.py  test_symbolic_4.py  test_symbolic_5.py  test_symbolic_6.py  test_symbolic_7.py  test_symbolic_8.py  test_symbolic_fstr.py  test_symbolic_stvec1.py
examples/tests/: test_Hamiltonian.py  test_Molecule.py  test_ReducedDensityMatrix.py  test_eigenbasis_of.py  test_redfield.py  test_symbolic_2.py  test_symbolic_3.py  test_symbolic_4.py  test_symbolic_7.py  test_symbolic_8.py  test_units.py
implementations/python/: redfield.py
pylint/: README  pylintrc
qm/: __init__.py
qm/corfunctions/: __init__.py  correlationfunctions.py
qm/hilbertspace/: hamiltonian.py  operators.py
qm/liouvillespace/: systembathinteraction.py
qm/propagators/: propagations.py
quantarhei/: __init__.c  __init__.py  exceptions.py  lams.py  qrhei.py  tests.py
quantarhei/benchmarks/: gpu_bench.py
quantarhei/builders/: __init__.py  aggregate_base.py  aggregate_excitonanalysis.py  aggregate_pdeph.py  aggregate_spectroscopy.py  aggregate_states.py  aggregate_test.py  aggregates.py  disorder.py  interactions.py  modes.py  molecule_test.py  molecules.py  opensystem.py  pdb.py  submodes.py  sysmodes.py  vibsystem.py
quantarhei/core/: __init__.py  cy_stochastics.pyx  datasaveable.py  dfunction.py  frequency.py  genconf.py  implementations.py  logconf.py  managers.py  matrixdata.py  numconf.py  parallel.py  parcel.py  plottable.py  savable.py  saveable.py  singleton.py  stochastics.py  time.py  triangle.py  unique.py  unit_enums.py  units.py  valueaxis.py  wrappers.py
quantarhei/dev/: feature.py
quantarhei/functions/: __init__.py  dfce1.py
quantarhei/ipython/: magic.py
quantarhei/models/: __init__.py  bacteriochlorophylls.py  bacteriopheophitins.py  bacteriopheophytins.py  chlorophylls.py  modelgenerator.py  molecularmodel.py  spectdens.py
quantarhei/qm/: __init__.py
quantarhei/scripts/: ghenerate.py  lams.py  qlaunch.py  qrhei.py  qtask.py  qtest.py  qview.py
quantarhei/simulations/: excitondynamics.py  simulation.py
quantarhei/spectroscopy/: __init__.py  abs.py  abs2.py  absbase.py  abscalculator.py  abscontainer.py  circular_dichroism.py  diagramatics.py  dsfeynman.py  (+19 more)
spectroscopy/: __init__.py  abs.py
tests/: ModifiedRedfield.ipynb  PumpProbe_spectra.ipynb  README
tutorials/: README.rst
utils/: types.py
(+589 files in other folders)
