[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantarhei"
version = "0.0.68"
description = "Quantarhei: Open Quantum System Theory for Molecular Systems"
readme = "README.rst"
license = { text = "MIT" }
authors = [
  { name = "Tomas Mancal", email = "mancal@karlov.mff.cuni.cz" }
]
keywords = [
  "physics",
  "chemistry",
  "quantum mechanics",
  "open quantum systems",
  "spectroscopy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.9,<2",
  "matplotlib>=3.5,<4",
  "dill>=0.3.6,<1",
  "terminaltables>=3.1,<4",
  "gherkin-official>=4.1,<5",
  "pyyaml>=6.0,<7",
  "packaging>=21.0,<27",
]

[project.urls]
Homepage = "https://github.com/tmancal74/quantarhei"

[project.scripts]
qrhei = "quantarhei.scripts.qrhei:main"
ghenerate = "quantarhei.scripts.ghenerate:main"
qtask = "quantarhei.scripts.qtask:main"
qview = "quantarhei.scripts.qview:main"
qlaunch = "quantarhei.scripts.qlaunch:main"
qtest = "quantarhei.scripts.qtest:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-v --tb=short"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "I", "B", "D208", "D202", "D412", "D210", "D212", "RET505", "ISC003", "RUF"]
ignore = [
    # Scientific code — math variables (E, H, N, l, I) are standard physics symbols
    "E741",
    # Module-level imports not at top — often intentional (conditional, deferred)
    "E402",
    # ── Remaining large cleanup batches ───────────────────────────────────────
    "E501",    # line too long (416 violations)
    "E722",    # bare except (153 violations — #186)
    "F821",    # undefined name (87 violations — often dynamic attributes)
    "F841",    # unused variable (76 violations)
    # UP031 — fully resolved
    # ── Medium-risk / needs-review — addressed in follow-up PRs ───────────────
    "B904",    # raise-without-from inside except (61 violations)
    "RUF059",  # unused-unpacked-variable (49 violations)
    "RUF012",  # mutable-class-default (11 violations)
    "E712",    # true-false-comparison (16 violations)
    "E711",    # none-comparison (4 violations)
    "B905",    # zip-without-explicit-strict (4 violations)
    "RUF002",  # ambiguous-unicode-character-docstring (2 violations)
    "B028",    # no-explicit-stacklevel in warnings (2 violations)
    "B008",    # function-call-in-default-argument (2 violations)
    "UP028",   # yield-in-for-loop (1 violation)
    "F811",    # redefined-while-unused (5 violations)
    "RUF005",  # collection-literal-concatenation (1 violation)
    "B018",    # useless-expression (1 violation)
    # B006 — fully resolved
    "B007",    # unused-loop-control-variable (66 violations)
]

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "quantarhei/wizard/examples",
    "quantarhei/wizard/benchmarks",
    "quantarhei/scripts/codelets",
]

# Modules with unresolvable [misc] errors from multiple inheritance chains
# through untyped base classes — suppressed until #189 type annotation pass
[[tool.mypy.overrides]]
module = [
    "quantarhei.qm.liouvillespace.tdredfieldtensor",
    "quantarhei.qm.liouvillespace.tdredfieldfoerster",
    "quantarhei.qm.liouvillespace.tdfoerstertensor",
    "quantarhei.qm.liouvillespace.redfieldfoerster",
    "quantarhei.spectroscopy.twod22",
    "quantarhei.spectroscopy.twodspect",
    "quantarhei.spectroscopy.twodresponse",
]
ignore_errors = true

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]

[tool.setuptools.package-data]
quantarhei = [
  "py.typed",
  "testing/resources/behave/*.feature",
  "wizard/examples/*.py",
  "wizard/examples/*.yaml",
  "wizard/examples/*.pdb",
  "wizard/examples/*.ipynb",
]
